[feature] login, logout, jwtToken
