# src/index.js
@@ -1,37 +1,38 @@
-import express from 'express';
-import cors from 'cors';
-import morgan from 'morgan';
-import compression from 'compression';
-import dotenv from 'dotenv';
-
+import express from "express";
+import cors from "cors";
+import morgan from "morgan";
+import compression from "compression";
+import dotenv from "dotenv";
+//import bodyParser from "body-parser";
+import jwt from "jsonwebtoken";
 // 라우터 파일 가져오기
-import userRoutes from './user/user.route.js';
+import userRoutes from "./user/user.route.js";
 // import calendarRouter from './calendar/calendar.route.js';
-import projectRoutes from './project/project.route.js';
+import projectRoutes from "./project/project.route.js";
 
 // 오류 처리 미들웨어 가져오기
 import swaggerUiExpress from "swagger-ui-express";
-import { notFoundHandler, errorHandler } from './middlewares/errorHandler.js';
-import { getUserInfo } from './user/info/user.info.controller.js';
-import { getFinishProjectInfo, getProjectInfo, getWorkingProjectInfo } from './project/project.controller.js';
-import { getSpecificProjectInfo } from './project/project.controller.js';
-import swaggerFile from '../swagger/swagger-output.json' with { type: 'json' };
-import swaggerUi from 'swagger-ui-express';
+import { notFoundHandler, errorHandler } from "./middlewares/errorHandler.js";
+import { getUserInfo } from "./user/info/user.info.controller.js";
+import {
+  getFinishProjectInfo,
+  getProjectInfo,
+  getWorkingProjectInfo,
+} from "./project/project.controller.js";
+import { getSpecificProjectInfo } from "./project/project.controller.js";
+import swaggerFile from "../swagger/swagger-output.json" with { type: "json" };
+import swaggerUi from "swagger-ui-express";
 
 dotenv.config(); // dotenv 설정
 
 const app = express();
 const port = 3000;
 
-app.use(
-  "/docs",
-  swaggerUiExpress.serve,
-  swaggerUiExpress.setup(swaggerFile)
-);
+app.use("/docs", swaggerUiExpress.serve, swaggerUiExpress.setup(swaggerFile));
 
 app.use((req, res, next) => {
-  if (req.protocol === 'http') {
-    console.log('HTTP 요청 처리 중');
+  if (req.protocol === "http") {
+    console.log("HTTP 요청 처리 중");
   }
   next();
 });
@@ -41,17 +42,15 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 app.use(cors({ origin: "*" }));
 app.use(compression());
-app.use(morgan('dev'));
+app.use(morgan("dev"));
 
-
-
-app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerFile));
+app.use("/swagger", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 // 라우터 설정
 
 // 지워 users 때문에 이상한거에 접속함
 
-// app.use("/users", userRoutes);/
+app.use("/users", userRoutes);
 // app.use("/calendar", calendarRoutes);
 // app.use("/projects", projectRoutes);
 
@@ -61,7 +60,6 @@ app.post("/projects/info", getProjectInfo);
 app.post("/projects/:projectKey/info", getSpecificProjectInfo); // 프로젝트 1개 상세히 선택
 app.post("/projects/info/progress", getWorkingProjectInfo); // 프로젝트 진행 중
 app.post("/projects/info/finish", getFinishProjectInfo); // 프로젝트 끝
-
 
 // 이예지
 // app.post("/projects/:projectKey/member");
